fix: 修复已发现的bug，增加minio支持